Bug fix for background(no white space observed)

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,16 @@
+body {
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden !important;
+}
+
+.try {
+  position: relative;
+  z-index: 10;
+  color: white;
+}
+
+
 /* ============================================================================================== 
 This copyright notice must be kept untouched in the stylesheet at all times.
 The original version of this stylesheet and the associated (x)html 
@@ -69,7 +82,7 @@ header a, a:visited {
 }
 
 .stars, .twinkling, .clouds {
-  position:absolute;
+  position:fixed;
   top:0;
   left:0;
   right:0;
@@ -80,12 +93,12 @@ header a, a:visited {
 }
 
 .stars {
-  background:#000 url(images/stars.png) repeat top center;
+  background:#000 url(../images/stars.png) repeat top center;
   z-index:0;
 }
 
 .twinkling{
-  background:transparent url(images/twinkling.png) repeat top center;
+  background:transparent url(../images/twinkling.png) repeat top center;
   z-index:1;
 
   -moz-animation:move-twink-back 200s linear infinite;
@@ -96,7 +109,7 @@ header a, a:visited {
 }
 
 .clouds{
-    background:transparent url(images/clouds3.png) repeat top center;
+    background:transparent url(../images/clouds3.png) repeat top center;
     z-index:3;
 
   -moz-animation:move-clouds-back 200s linear infinite;
